--- a/src/view/index.html
+++ b/src/view/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>APP</title>
+  <%=htmlWebpackPlugin.files.manifestJSON%>
+  <%=htmlWebpackPlugin.files.webpackManifest%>
 </head>
 <body>
   <div id="root"></div>
